@@ -96,6 +96,15 @@ then
     exit 1
 fi
 
+echo 'Sanity check the radar.dp_entrezgene tables' | tee -a ${LOG}
+${PG_DBUTILS}/bin/testRadarEntrezGene.csh | tee -a ${LOG}
+if [ $status != 0 ] 
+then
+        echo 'radar.dp_entrezgene tables did not pass sanity check; skipping egload' | tee -a ${LOG}
+        exit 0
+fi
+echo 'radar.dp_entrezgene tables passed sanity check; continuing with egload' | tee -a ${LOG}
+
 #
 #  Perform pre-load tasks.
 #
